5/7/25:

- Move Cell inside of Gameboard
- Make alerts and finished display when cell is taken and/or game is finished
- Add alerts and finished divs in html
- Add notes in pseudocode about textContent displays

5/6/25:

- Remove placeholder gif and text
- Center grid horizontally on page
- Start work on creating game display via DOM
- Add basic css styling for turn and board divs
- Create turn and board divs in html file
- Change wrapper name to container
- Create space for display/DOM code
- Rename resetGame to resetGameboard
- Move resetGame function location
- Create resetGame function to clear board and set to player 1's turn
- Add test move function
- Step 4 wip
- Add end game conditions to stop from playing game if finished
- Complete step 1, 2
- Add function to simulate played game
- Update checkWin logic
- Add moveSuccessful variable to store result of dropMarker
- Fix dropMarker function logic to correctly check row and column availability
- Remove unnecessary filter logic in dropMarker function

5/5/25:

- Various fixes to and debugging of function logic
- Add win condition check
- Create gameController function to create players and handle switching turns
- Create getValue function to retrieve current value of cell
- Create Cell function to take player markers
- Create printBoard function to print to console
- Create dropMarker function to check if chosen cell is available
- Create nested for loop to take columns and rows and create 2D array
- Create 3 column and 3 row constants
- Change gameBoard from {} to []

5/2/25:

- Complete step 1a, 1b
- Add giveScore function to increment playerScore as a test
- Create factory to create players along with test player
- Create factory within IIFE to create gameBoard
- Update pseudocode wording on step 1c and fix step 1 sub numbering
- Create basic container div and add temporary basic styling to see where things go
- Set default margin and padding to 0
- Create pseudocode
- Fix wrong file upload